// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssemblyEditorDrawerWidget /> opens and closes dialog on FAB click 1`] = `
<div
  class="AssemblyEditorDrawerWidget-popper-158"
  data-testid="AssemblyEditorDrawerWidgetAddPopper"
  role="tooltip"
  style="position: absolute;"
>
  <div
    class="MuiPaper-root-236 MuiPaper-elevation2-240 MuiPaper-rounded-237 AssemblyEditorDrawerWidget-menu-162"
    style="opacity: 1; transform: scale(1, 1);"
  >
    <div>
      <p
        class="MuiTypography-root-164 MuiTypography-subtitle1-182 MuiTypography-colorTextSecondary-197"
      >
        Enter the name of the new assembly
      </p>
      <div
        class="MuiFormControl-root-307"
      >
        <label
          class="MuiFormLabel-root-322 MuiFormLabel-focused-323 MuiInputLabel-focused-312 MuiInputLabel-root-311 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-shrink-318"
          data-shrink="true"
        >
          Assembly name
        </label>
        <div
          class="MuiInputBase-root-342 MuiInput-root-329 MuiInput-underline-333 MuiInputBase-focused-344 MuiInput-focused-331 MuiInputBase-formControl-343 MuiInput-formControl-330"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-352 MuiInput-input-337"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="AssemblyEditorDrawerWidget-menuButtons-163"
      >
        <button
          class="MuiButtonBase-root-206 MuiButton-root-359 MuiButton-text-361 MuiButton-textSecondary-363 MuiButton-flat-364 MuiButton-flatSecondary-366"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-360"
          >
            Cancel
          </span>
          <span
            class="MuiTouchRipple-root-228"
          />
        </button>
        <button
          class="MuiButtonBase-root-206 MuiButtonBase-disabled-207 MuiButton-root-359 MuiButton-text-361 MuiButton-textSecondary-363 MuiButton-flat-364 MuiButton-flatSecondary-366 MuiButton-disabled-379"
          data-testid="AssemblyEditorDrawerWidgetSubmitButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-360"
          >
            Add assembly
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AssemblyEditorDrawerWidget /> opens and closes dialog on FAB click 2`] = `
<div
  class="AssemblyEditorDrawerWidget-popper-158"
  data-testid="AssemblyEditorDrawerWidgetAddPopper"
  role="tooltip"
  style="position: absolute;"
>
  <div
    class="MuiPaper-root-236 MuiPaper-elevation2-240 MuiPaper-rounded-237 AssemblyEditorDrawerWidget-menu-162"
    style="opacity: 0; transform: scale(0.75, 0.5625);"
  >
    <div>
      <p
        class="MuiTypography-root-164 MuiTypography-subtitle1-182 MuiTypography-colorTextSecondary-197"
      >
        Enter the name of the new assembly
      </p>
      <div
        class="MuiFormControl-root-307"
      >
        <label
          class="MuiFormLabel-root-322 MuiFormLabel-focused-323 MuiInputLabel-focused-312 MuiInputLabel-root-311 MuiInputLabel-formControl-316 MuiInputLabel-animated-319 MuiInputLabel-shrink-318"
          data-shrink="true"
        >
          Assembly name
        </label>
        <div
          class="MuiInputBase-root-342 MuiInput-root-329 MuiInput-underline-333 MuiInputBase-focused-344 MuiInput-focused-331 MuiInputBase-formControl-343 MuiInput-formControl-330"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input-352 MuiInput-input-337"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="AssemblyEditorDrawerWidget-menuButtons-163"
      >
        <button
          class="MuiButtonBase-root-206 MuiButton-root-359 MuiButton-text-361 MuiButton-textSecondary-363 MuiButton-flat-364 MuiButton-flatSecondary-366"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-360"
          >
            Cancel
          </span>
          <span
            class="MuiTouchRipple-root-228"
          />
        </button>
        <button
          class="MuiButtonBase-root-206 MuiButtonBase-disabled-207 MuiButton-root-359 MuiButton-text-361 MuiButton-textSecondary-363 MuiButton-flat-364 MuiButton-flatSecondary-366 MuiButton-disabled-379"
          data-testid="AssemblyEditorDrawerWidgetSubmitButton"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-360"
          >
            Add assembly
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AssemblyEditorDrawerWidget /> opens and closes dialog on help click 1`] = `
<div
  class="AssemblyEditorDrawerWidget-popper-389"
  data-testid="AssemblyEditorDrawerWidgetHelpPopper"
  role="tooltip"
  style="position: absolute;"
>
  <div
    class="MuiPaper-root-467 MuiPaper-elevation2-471 MuiPaper-rounded-468 AssemblyEditorDrawerWidget-menu-393"
    style="opacity: 1; transform: scale(1, 1);"
  >
    <div>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        JBrowse uses the assemblies listed here to help make sure that tracks appear on the correct reference sequence.
      </p>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        You can define aliases for an assembly so that the two assembly names are treated as the same, e.g. GRCh37 and hg19.
      </p>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        You can also define any reference sequences within that assembly that may have multiple names, such as 1 and chr1 or ctgA and contigA.
      </p>
    </div>
  </div>
</div>
`;

exports[`<AssemblyEditorDrawerWidget /> opens and closes dialog on help click 2`] = `
<div
  class="AssemblyEditorDrawerWidget-popper-389"
  data-testid="AssemblyEditorDrawerWidgetHelpPopper"
  role="tooltip"
  style="position: absolute;"
>
  <div
    class="MuiPaper-root-467 MuiPaper-elevation2-471 MuiPaper-rounded-468 AssemblyEditorDrawerWidget-menu-393"
    style="opacity: 0; transform: scale(0.75, 0.5625);"
  >
    <div>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        JBrowse uses the assemblies listed here to help make sure that tracks appear on the correct reference sequence.
      </p>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        You can define aliases for an assembly so that the two assembly names are treated as the same, e.g. GRCh37 and hg19.
      </p>
      <p
        class="MuiTypography-root-395 MuiTypography-body1-404 MuiTypography-paragraph-423"
      >
        You can also define any reference sequences within that assembly that may have multiple names, such as 1 and chr1 or ctgA and contigA.
      </p>
    </div>
  </div>
</div>
`;

exports[`<AssemblyEditorDrawerWidget /> renders 1`] = `
<div
  class="AssemblyEditorDrawerWidget-root-1"
>
  <div
    class="AssemblyEditorDrawerWidget-header-2"
  >
    <h6
      class="MuiTypography-root-11 MuiTypography-subtitle1-29 AssemblyEditorDrawerWidget-headerText-3"
    >
      Configured assemblies
    </h6>
    <button
      class="MuiButtonBase-root-53 MuiIconButton-root-47"
      data-testid="AssemblyEditorDrawerWidgetHelpButton"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiIconButton-label-52"
      >
        <span
          aria-hidden="true"
          class="material-icons MuiIcon-root-56"
        >
          help
        </span>
      </span>
      <span
        class="MuiTouchRipple-root-75"
      />
    </button>
  </div>
  <div
    class="MuiPaper-root-83 MuiPaper-elevation1-86 MuiPaper-rounded-84 MuiCard-root-82 AssemblyEditorDrawerWidget-assembly-6"
  >
    <div
      class="MuiCardHeader-root-110"
    >
      <div
        class="MuiCardHeader-content-113"
      >
        <span
          class="MuiTypography-root-11 MuiTypography-headline-16 MuiCardHeader-title-114"
        >
          volvox
        </span>
      </div>
      <div
        class="MuiCardHeader-action-112"
      >
        <button
          class="MuiButtonBase-root-53 MuiIconButton-root-47"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-52"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root-56"
            >
              edit
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-75"
          />
        </button>
        <button
          class="MuiButtonBase-root-53 MuiIconButton-root-47"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label-52"
          >
            <span
              aria-hidden="true"
              class="material-icons MuiIcon-root-56"
            >
              delete
            </span>
          </span>
          <span
            class="MuiTouchRipple-root-75"
          />
        </button>
      </div>
    </div>
    <div
      class="MuiCardContent-root-116"
    >
      <div
        class="MuiPaper-root-83 MuiPaper-elevation2-87 MuiPaper-rounded-84 AssemblyEditorDrawerWidget-paper-4"
      >
        <ul
          class="MuiList-root-117 MuiList-dense-119 MuiList-padding-118 MuiList-subheader-120"
        >
          <li
            class="MuiListSubheader-root-121 MuiListSubheader-sticky-126 MuiListSubheader-gutters-124"
          >
            Aliases:
          </li>
          <hr
            class="MuiDivider-root-127"
          />
          <li
            class="MuiListItem-root-132 MuiListItem-default-135 MuiListItem-dense-136 MuiListItem-gutters-140"
          >
            <div
              class="MuiListItemIcon-root-144"
            >
              <div
                class="MuiAvatar-root-145 MuiAvatar-colorDefault-146 AssemblyEditorDrawerWidget-listNumber-7"
              >
                1
              </div>
            </div>
            <div
              class="MuiListItemText-root-148 MuiListItemText-dense-150"
            >
              <span
                class="MuiTypography-root-11 MuiTypography-subheading-18 MuiListItemText-primary-151 MuiListItemText-textDense-153"
              >
                vvx
              </span>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="MuiPaper-root-83 MuiPaper-elevation2-87 MuiPaper-rounded-84"
      >
        <ul
          class="MuiList-root-117 MuiList-dense-119 MuiList-padding-118 MuiList-subheader-120"
        >
          <li
            class="MuiListSubheader-root-121 MuiListSubheader-sticky-126 MuiListSubheader-gutters-124"
          >
            Reference Sequence Aliases:
          </li>
          <hr
            class="MuiDivider-root-127"
          />
          <ul
            class="MuiList-root-117 MuiList-dense-119 MuiList-padding-118 MuiList-subheader-120"
          >
            <li
              class="MuiListSubheader-root-121 MuiListSubheader-sticky-126 MuiListSubheader-gutters-124"
            >
              ctgA
            </li>
            <li
              class="MuiListItem-root-132 MuiListItem-default-135 MuiListItem-dense-136 MuiListItem-gutters-140"
            >
              <div
                class="MuiListItemIcon-root-144"
              >
                <div
                  class="MuiAvatar-root-145 MuiAvatar-colorDefault-146 AssemblyEditorDrawerWidget-listNumber-7"
                >
                  1
                </div>
              </div>
              <div
                class="MuiListItemText-root-148 MuiListItemText-dense-150"
              >
                <span
                  class="MuiTypography-root-11 MuiTypography-subheading-18 MuiListItemText-primary-151 MuiListItemText-textDense-153"
                >
                  A
                </span>
              </div>
            </li>
            <li
              class="MuiListItem-root-132 MuiListItem-default-135 MuiListItem-dense-136 MuiListItem-gutters-140"
            >
              <div
                class="MuiListItemIcon-root-144"
              >
                <div
                  class="MuiAvatar-root-145 MuiAvatar-colorDefault-146 AssemblyEditorDrawerWidget-listNumber-7"
                >
                  2
                </div>
              </div>
              <div
                class="MuiListItemText-root-148 MuiListItemText-dense-150"
              >
                <span
                  class="MuiTypography-root-11 MuiTypography-subheading-18 MuiListItemText-primary-151 MuiListItemText-textDense-153"
                >
                  contigA
                </span>
              </div>
            </li>
            <hr
              class="MuiDivider-root-127"
            />
          </ul>
          <ul
            class="MuiList-root-117 MuiList-dense-119 MuiList-padding-118 MuiList-subheader-120"
          >
            <li
              class="MuiListSubheader-root-121 MuiListSubheader-sticky-126 MuiListSubheader-gutters-124"
            >
              ctgB
            </li>
            <li
              class="MuiListItem-root-132 MuiListItem-default-135 MuiListItem-dense-136 MuiListItem-gutters-140"
            >
              <div
                class="MuiListItemIcon-root-144"
              >
                <div
                  class="MuiAvatar-root-145 MuiAvatar-colorDefault-146 AssemblyEditorDrawerWidget-listNumber-7"
                >
                  1
                </div>
              </div>
              <div
                class="MuiListItemText-root-148 MuiListItemText-dense-150"
              >
                <span
                  class="MuiTypography-root-11 MuiTypography-subheading-18 MuiListItemText-primary-151 MuiListItemText-textDense-153"
                >
                  B
                </span>
              </div>
            </li>
            <li
              class="MuiListItem-root-132 MuiListItem-default-135 MuiListItem-dense-136 MuiListItem-gutters-140"
            >
              <div
                class="MuiListItemIcon-root-144"
              >
                <div
                  class="MuiAvatar-root-145 MuiAvatar-colorDefault-146 AssemblyEditorDrawerWidget-listNumber-7"
                >
                  2
                </div>
              </div>
              <div
                class="MuiListItemText-root-148 MuiListItemText-dense-150"
              >
                <span
                  class="MuiTypography-root-11 MuiTypography-subheading-18 MuiListItemText-primary-151 MuiListItemText-textDense-153"
                >
                  contigB
                </span>
              </div>
            </li>
            <hr
              class="MuiDivider-root-127"
            />
          </ul>
        </ul>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root-53 MuiFab-root-65 MuiFab-secondary-68 AssemblyEditorDrawerWidget-fab-8"
    data-testid="AssemblyEditorDrawerWidgetFAB"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiFab-label-66"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root-56"
      >
        add
      </span>
    </span>
    <span
      class="MuiTouchRipple-root-75"
    />
  </button>
</div>
`;
